# need-only-prd

./: .env.example  .gitignore  CLAUDE.md  README.md  commit_msg.txt  start.sh  stop.sh
backend/: fix_agents.py  pyproject.toml  test_codegen_direct.py  test_regex.py
backend/.sessions/: 97bfa7d0-9b0f-4152-a599-4d131547bf0a.json  ab394936-9ad0-42b6-aa07-be384de06b27.json  d7ee2370-f9b1-4664-80c8-a66e0f244832.json  f051f3c1-3609-49a6-9028-274b7df8b84d.json
backend/app/: config.py  docker_manager.py  main.py  models.py  pfy_local.py  session.py
backend/app/llm/: agents.py  client.py  codegen_context.py  codegen_pipeline.py  codegen_prompts.py  mockup_client.py  mockup_pipeline.py  mockup_prompts.py  orchestrator.py  pipeline.py  prompts.py  vue_generator.py
backend/app/routers/: chat.py  codegen.py  export.py  input.py  llm_proxy.py  mockup.py  session.py  spec.py  validate.py
backend/app/utils/: text.py
backend/scripts/: build_component_catalog.py
backend/tests/: conftest.py  test_mockup_client.py  test_mockup_models.py  test_mockup_pipeline.py  test_mockup_router.py  test_models.py  test_pipeline.py  test_pom_import_blocking.py  test_routers.py  test_session.py  test_vue_generator.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
pfy-front/: .env.demo  .env.development  .env.production  .eslintrc.cjs  .gitignore  .npmrc  .prettierignore  .prettierrc.cjs  README.md  SCAFFOLDING_README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
pfy_prompt/: CPMS_namebook.md  InterviewParser.md  (+7 more)
(+600 files in other folders)
